# MEDAL

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  ~
comparisons/: requirements.in  run_all.sh  run_embedr_tsne.sbatch  run_embedr_umap.sbatch  run_pcs.sbatch  run_scdeed.sbatch
drd/: drd.py  loss.py
eval/: __init__.py  configs.py  data.py  eval_utils.py  run_depth_analysis.py  run_drd.py  run_lambda_d_analysis.py  run_sweep.py  run_width_analysis.py  tuning.py
examples/: pca.ipynb  plot_reconstruction_error.ipynb  simple.ipynb  tune_architecture_example.py  umap.ipynb
notebooks/: astro_analysis.ipynb  astro_tuning_eval.py  batch_embed.ipynb  compare_methods.ipynb  compare_teachers.ipynb  confidence_interval.ipynb  drd_viz.ipynb  feature_importance.ipynb  feature_importance.py  hydra_aff.py  hydra_tuning_eval.py  macaque.ipynb  macaque_1.ipynb  macaque_distshift_detection.ipynb  mnist_tuning_eval.py  motivation_figures.ipynb  nn_distill_tuning.html  nn_distill_tuning.ipynb  pca.ipynb  pretraining.ipynb  reconstruction_validity.ipynb  run_eval.sh  structure_preservation_metrics.py  tasic_analysis.ipynb  tasic_tuning_eval.py  umap.ipynb  utils.py
scripts/: PBMC_script.sh  diabetes_script.sh  gene_cancer_script.sh  hydra_script.sh  macaque_script.sh  mnist_script.sh  single_cell_script.sh  synthetic_script.sh  tasic_script.sh  wine_script.sh
tests/: conftest.py  test_model.py  test_selection.py  test_teacher.py
utils/: __init__.py  eval_utils.py  plotting_utils.py  process_astro.py  process_hydra.py
(+43 files in other folders)
