[project]
name = "medal"
version = "0.1.0"
description = "Manifold Embedding Distillation via Autoencoder Learning"
authors = [{name = "Irene Chang"}]
readme = "README.md"
# requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  
